Student 1: Updated heading in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to the VPS Git Lab!</h1>
+    <h1>Welcome to the VPS Git Lab - Updated by Student 1!</h1>
     <script src="main.js"></script>
 </body>
 </html>
